fix: delete allowed_numbers

--- a/locales/id_ID.json
+++ b/locales/id_ID.json
@@ -1,3 +1,6 @@
 {
-    "intro": "Selamat datang"
+    "intro": "Selamat datang",
+    "template.menu": "Ketik angka *{{number}}* : untuk *{{menu}}*",
+    "menu.daftarProduk": "🧰 Daftar Produk",
+    "menu.alamatKantor": "Alamat Kantor"
 }
